Class 6 Armageddon/HK/HK/5-Route.tf
#############################################HONG KONG############################################
resource "aws_route_table" "hong_kong_private" {
  vpc_id = aws_vpc.hong_kong.id

  route = [
    {
      cidr_block                 = "0.0.0.0/0"
      nat_gateway_id             = aws_nat_gateway.hong_kong_nat.id
      carrier_gateway_id         = ""
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      gateway_id                 = ""
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_endpoint_id            = ""
      vpc_peering_connection_id  = ""
    },
  ]

  tags = {
    Name = "hong_kong_private"
  }
}

resource "aws_route_table" "hong_kong_public" {
  vpc_id = aws_vpc.hong_kong.id

  route = [
    {
      cidr_block                 = "0.0.0.0/0"
      gateway_id                 = aws_internet_gateway.hong_kong_igw.id
      nat_gateway_id             = ""
      carrier_gateway_id         = ""
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_endpoint_id            = ""
      vpc_peering_connection_id  = ""
    },
  ]

  tags = {
    Name = "hong_kong_public"
  }
}

#autralia_

resource "aws_route_table_association" "private-ap-east-1a" {
  subnet_id      = aws_subnet.private-ap-east-1a.id
  route_table_id = aws_route_table.hong_kong_private.id
}

resource "aws_route_table_association" "private-ap-east-1b" {
  subnet_id      = aws_subnet.private-ap-east-1b.id
  route_table_id = aws_route_table.hong_kong_private.id
}
resource "aws_route_table_association" "private-ap-east-1c" {
  subnet_id      = aws_subnet.private-ap-east-1c.id
  route_table_id = aws_route_table.hong_kong_private.id
}


#public

resource "aws_route_table_association" "public-ap-east-1a" {
  subnet_id      = aws_subnet.public-ap-east-1a.id
  route_table_id = aws_route_table.hong_kong_public.id
}

resource "aws_route_table_association" "public-ap-east-1b" {
  subnet_id      = aws_subnet.public-ap-east-1b.id
  route_table_id = aws_route_table.hong_kong_public.id
}

resource "aws_route_table_association" "public-ap-east-1c" {
  subnet_id      = aws_subnet.public-ap-east-1c.id
  route_table_id = aws_route_table.hong_kong_public.id
}
